# osm-rq

./: .gitignore  README.md  cli.py  main.py  pyproject.toml
src/: extract.py  pbf_loader.py  predict.py  visualization.py
src/adapters/: README.md  __init__.py  base.py  geojson_adapter.py  osm_adapter.py  postgis_adapter.py  shapefile_adapter.py
src/prediction/: __init__.py  apply.py  evaluate.py  train.py  utils.py
