[project]
name = "street-quality-predictor"
version = "0.1.0"
description = "A toolkit for extracting OSM data, scoring streets for quality, and applying machine learning to predict quality streets"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "arthurlch", email = "lachat.arthur.74@gmail.com"},
]

dependencies = [
    "pandas>=1.3.0",
    "geopandas>=0.10.0",
    "networkx>=2.6.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "folium>=0.12.0",
    "osmnx>=1.1.0",
    "joblib>=1.0.0",
    "shapely>=1.8.0",
    "sqlalchemy>=1.4.0",
]

[project.optional-dependencies]
pbf = ["pyrosm>=0.6.0"]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest]
testpaths = ["tests"]